Fixed scrollbar

--- a/src/sidebar/App.css
+++ b/src/sidebar/App.css
@@ -1,3 +1,35 @@
+.light *::-webkit-scrollbar {
+  width: 12px;
+  background: #f0f0f0;
+  border-radius: 8px;
+}
+
+.light *::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 8px;
+  border: 2px solid #f0f0f0;
+}
+
+.light *::-webkit-scrollbar-thumb:hover {
+  background: #999;
+}
+
+.dark *::-webkit-scrollbar {
+  width: 12px;
+  background: #222;
+  border-radius: 8px;
+}
+
+.dark *::-webkit-scrollbar-thumb {
+  background: #444;
+  border-radius: 8px;
+  border: 2px solid #222;
+}
+
+.dark *::-webkit-scrollbar-thumb:hover {
+  background: #666;
+}
+
 :root,
 .light {
   --bg-primary: #fff;
